cabal-version:       2.2

name:                exact-kantorovich
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exact-kantorovich#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Math.Optimization.Kantorovich
  build-depends:       base >= 4.7 && < 5
                     , simplex-method >= 0.2.0.0 && < 0.3
                     , containers >= 0.6.5.1 && < 0.7
                     , monad-logger >= 0.3.40 && < 0.4
                     , extra >= 1.7 && < 1.8
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/exact-kantorovich
