cabal-version:       2.2

name:                exact-kantorovich
version:             0.1.0.0
synopsis:            Exact Kantorovich distance between finite probability measures.
description:         This small package allows to compute the exact Kantorovich distance between two finite probability measures. This assumes that the probability masses are rational numbers and that the distance function takes rational values only.
homepage:            https://github.com/stla/exact-kantorovich#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2024 Stéphane Laurent
category:            Math, Optimization
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Math.Optimization.Kantorovich
  build-depends:       base >= 4.7 && < 5
                     , simplex-method >= 0.2.0.0 && < 0.3
                     , containers >= 0.6.5.1 && < 0.7
                     , monad-logger >= 0.3.40 && < 0.4
                     , matrix >= 0.3.6.0 && < 0.4
                     , array >= 0.5.5.0 && < 0.6
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/stla/exact-kantorovich
